@@ -5,7 +5,7 @@
 
 
 depend() {
-	use *
+	after *
 }
 
 start() {
